# getting-started

./: LICENSE  README.md
bq-runner/: Dockerfile  pyproject.toml  requirements.txt  tox.ini
bq-runner/src/: bq.py  main.py
bq-runner/tests/bq_runner/: test_bq.py  test_main.py
bq-runner/tests/ingest_data/: test_bq.py  test_main.py
ingest-data/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
ingest-data/src/: job.py  main.py
ingest-data/src/extract/: gcs.py
ingest-data/src/load/: bq.py
ingest-data/src/transform/: csv_to_bq.py
ingest-data/tests/ingest_data/: test_bq.py  test_csv_to_bq.py  test_gcs.py  test_job.py  test_main.py
